<?xml version="1.0" encoding="utf-8"?>
<!-- 
  copyright (C) 2011 Robert Schmidt
 
  This file <strings.xml> is part of Minimal Dicom Viewer.
 
  Minimal Dicom Viewer is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
 
  Minimal Dicom Viewer is distributed as Open Source Software ( OSS )
  and comes WITHOUT ANY WARRANTY and even with no IMPLIED WARRANTIES OF MERCHANTABILITY,
  OF SATISFACTORY QUALITY, AND OF FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU General Public License ( GPLv3 ) for more details.

 
  You should have received a copy of the GNU General Public License
  along with Minimal Dicom Viewer. If not, see <http://www.gnu.org/licenses/>.
 
  Released date: 13-11-2011
 
  Version: 1.0
 -->
<resources>
    <string name="app_name">Minimal Dicom Viewer</string>
    <string name="brightness">brightness</string>
    <string name="contrast">contrast</string>
    <string name="brightnessvalue">0</string>
    <string name="contrastvalue">0</string>
    
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
	<color name="gray">#ffff0000</color>
</resources>
